# docker-compose-template

./: README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: githubactions.yml
dockerfiles/pgadmin/: Dockerfile
dockerfiles/postgres/: Dockerfile
dockerfiles/python/: Dockerfile
