[tool.poetry]
name = "docker-compose-template"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.4"
psycopg2-binary = "^2.9.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
